@@ -1,6 +1,7 @@
 Version 0.10.4 (--WIP--)
 
 - Added an implementation of the storage using a simple directory structure and JSON files.
+- RatchetForwardingMessages do not require the recipient to be trusted any more, as they contain no user-generated content. See #22 for information. Fixes #22
 
 This version does not introduce any changes to public APIs. No further updating should be required.
 
